--- a/helloworld.yml
+++ b/helloworld.yml
@@ -1,6 +1,7 @@
---- name: Hello World!
-hosts: all
-user: root
-tasks:
-- name: Hello World!
-shell: echo "Hi! AWX is working"
+---
+name: Hello World!
+	hosts: all
+	user: root
+	tasks:
+	- name: Hello World!
+		shell: echo "Hi! AWX is working"
