--- a/helloworld.yml
+++ b/helloworld.yml
@@ -1,7 +1,8 @@
 ---
+
 name: Hello World!
- hosts: all
- user: root
- tasks:
+- hosts: all
+  user: root
+  tasks:
   - name: Hello World!
-   shell: echo "Hi! AWX is working"
+      shell: echo "Hi! AWX is working"
