--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -6,6 +6,8 @@
 
     - name: Run the rebuild script for DOKUWIKI
       shell:
-         " /Users/hank/Docker/wikis/music/bin/rebuild-music_wiki.sh ""
+         " rebuild-music_wiki "
       register: maintenance-dokuwiki
-      tags: dokuwiki
+      tags: maintenance-dokuwiki
+
+- debug: msg="{{maintenance-dokuwiki.stdout}}"
