--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -7,7 +7,7 @@
     - name: Run the rebuild script for DOKUWIKI
       shell:
          "rebuild-music_wiki"
-      register: maintenance-dokuwiki
-      tags: maintenance-dokuwiki
+      register: maintenancedokuwiki
+      tags: maintenancedokuwiki
 
-    - debug: msg="{{maintenance-dokuwiki.stdout}}"
+    - debug: msg="{{maintenancedokuwiki.stdout}}"
