Trying with bash

--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -7,3 +7,5 @@
     - name: Run the rebuild script for DOKUWIKI
       shell:
          "rebuild-music_wiki"
+        args: 
+          executable: /bin/bash
