--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -7,5 +7,5 @@
     - name: Run the rebuild script for DOKUWIKI
       shell:
          "/Users/hank/Docker/wikis/music/bin/rebuild-music_wiki.sh"
-      args: 
-         executable: /bin/bash
+#      args: 
+#         executable: /bin/bash
