--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -4,6 +4,8 @@
     hosts: DOCKERHOST-PROD
     become: yes
     become_user: root
+    vars:
+      - demo: "{{ lookup('hashi_vault', 'secret=home-environment-live/beast/system-password token=s.ztKWCLh4NEvzvNMdvEzO1G6U url=https://beast.foxy.home:8200 validate_certs=false') }}"
     tasks:
 
     - name: Run the rebuild script for DOKUWIKI
