--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -2,10 +2,11 @@
 
   - name: Maintenance for DokuWiki containers
     hosts: DOCKERHOST-PROD
-    become: yes
-    become_user: root
     vars:
-      - demo: "{{ lookup('hashi_vault', 'secret=home-environment-live/beast/system-password token=s.ztKWCLh4NEvzvNMdvEzO1G6U url=https://beast.foxy.home:8200 validate_certs=false') }}"
+      - hcvaultkey: "{{ lookup('hashi_vault', 'secret=home-environment-live/beast/system-password token=s.ztKWCLh4NEvzvNMdvEzO1G6U url=https://beast.foxy.home:8200 validate_certs=false') }}"
+    sudo: yes
+    sudo_user: hank
+    sudo_password: "{{ hcvaultkey }}" 
     tasks:
 
     - name: Run the rebuild script for DOKUWIKI
