--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -2,6 +2,7 @@
 
   - name: Maintenance for DokuWiki containers
     hosts: DOCKERHOST-PROD
+    sudo: yes
     tasks:
 
     - name: Run the rebuild script for DOKUWIKI
