--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -3,8 +3,8 @@
   - name: Maintenance for DokuWiki containers
     hosts: DOCKERHOST-PROD
     become: yes
+    become_method: sudo
     tasks:
-
     - name: Run the rebuild script for DOKUWIKI
       shell:
          "/Users/hank/Docker/wikis/music/bin/rebuild-music_wiki.sh"
