--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -8,7 +8,8 @@
     - name: Run the rebuild script for DOKUWIKI
       shell:
 #         "/Users/hank/Docker/wikis/music/bin/rebuild-music_wiki.sh"
-          "rebuild-music_wiki"
+#         "rebuild-music_wiki"
+         "/usr/local/bin/rebuild-music_wiki" 
       args: 
          executable: /bin/bash
       register: bashcmd
