--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -2,7 +2,7 @@
 
   - name: Maintenance for DokuWiki containers
     hosts: DOCKERHOST-PROD
-#    become: yes
+    become: yes
 #    become_method: sudo
     tasks:
     - name: Run the rebuild script for DOKUWIKI
