--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -5,8 +5,8 @@
     tasks:
     - name: Run the rebuild script for DOKUWIKI
       shell:
-#         "/Users/hank/Docker/wikis/music/bin/rebuild-music_wiki.sh"
-         "echo test"
+         "/Users/hank/Docker/wikis/music/bin/rebuild-music_wiki.sh"
+#         "echo test"
       args: 
          executable: /bin/bash
       register: bashcmd
