--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -4,8 +4,9 @@
     hosts: DOCKERHOST-PROD
     tasks:
     - name: Run the rebuild script for DOKUWIKI
-      shell:
-         "/Users/hank/Docker/wikis/music/bin/rebuild-music_wiki.sh"
+      ansible.builtin.script: /Users/hank/Docker/wikis/music/bin/rebuild-music_wiki.sh 
+#      shell:
+#         "/Users/hank/Docker/wikis/music/bin/rebuild-music_wiki.sh"
 #         "echo test"
       args: 
          executable: /bin/bash
