--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -4,7 +4,7 @@
     hosts: DOCKERHOST-PROD
     tasks:
     - name: Run the rebuild script for DOKUWIKI
-      ansible.builtin.script: /Users/hank/Docker/wikis/music/bin/rebuild-music_wiki.sh 
+      ansible.builtin.shell: "/Users/hank/Docker/wikis/music/bin/rebuild-music_wiki.sh" 
 #      shell:
 #         "/Users/hank/Docker/wikis/music/bin/rebuild-music_wiki.sh"
 #         "echo test"
