--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -6,7 +6,7 @@
     - name: Run the rebuild script for DOKUWIKI
 #      ansible.builtin.shell: "docker --help" 
       shell:
-        " diskutil list "
+        " docker --help "
       become: yes
       args: 
          executable: /bin/bash
