--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -48,14 +48,14 @@
 
     - debug: msg="{{dokuwiki_pull_image.stdout}}"
 
-    - name: Start the DOKUWIKI container(s)
-      command: chdir=/Users/hank/Docker/wikis/music/
-      shell:
-        " /usr/local/bin/docker run -d --restart=unless-stopped --name=wiki_music -p 8003:80 --mount type=bind,source="$(pwd)"/data,target=/config/dokuwiki/data/ linuxserver/dokuwiki:latest "
-      become: yes
-      args:
-         executable: /bin/bash
-      register: dokuwiki_start_container
-      tags: dokuwiki_start_container
+#    - name: Start the DOKUWIKI container(s)
+#      command: chdir=/Users/hank/Docker/wikis/music/
+#      shell:
+#        " /usr/local/bin/docker run -d --restart=unless-stopped --name=wiki_music -p 8003:80 --mount type=bind,source="$(pwd)"/data,target=/config/dokuwiki/data/ linuxserver/dokuwiki:latest "
+#      become: yes
+#      args:
+#         executable: /bin/bash
+#      register: dokuwiki_start_container
+#      tags: dokuwiki_start_container
 
-    - debug: msg="{{dokuwiki_start_container.stdout}}"
+#    - debug: msg="{{dokuwiki_start_container.stdout}}"
