--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -51,7 +51,7 @@
     - name: Start the DOKUWIKI container(s)
       command: chdir=/Users/hank/Docker/wikis/music/
       shell:
-        " /usr/local/bin/docker run -d --restart=unless-stopped --name=wiki_music -p 8003:80 --mount type=bind,source="$(pwd)"/data,target=/config/dokuwiki/data/ linuxserver/dokuwiki:latest "
+        '" /usr/local/bin/docker run -d --restart=unless-stopped --name=wiki_music -p 8003:80 --mount type=bind,source="$(pwd)"/data,target=/config/dokuwiki/data/ linuxserver/dokuwiki:latest "'
       become: yes
       args:
          executable: /bin/bash
