Try it this way

--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -49,11 +49,11 @@
     - debug: msg="{{dokuwiki_pull_image.stdout}}"
 
     - name: Start the DOKUWIKI container(s)
-      command: chdir=/Users/hank/Docker/wikis/music/
       shell:
-        '" /usr/local/bin/docker run -d --restart=unless-stopped --name=wiki_music -p 8003:80 --mount type=bind,source="$(pwd)"/data,target=/config/dokuwiki/data/ linuxserver/dokuwiki:latest "'
+        " /usr/local/bin/docker run -d --restart=unless-stopped --name=wiki_music -p 8003:80 --mount type=bind,source=$(pwd)/data,target=/config/dokuwiki/data/ linuxserver/dokuwiki:latest "'
       become: yes
       args:
+         chdir: /Users/hank/Docker/wikis/music/
          executable: /bin/bash
       register: dokuwiki_start_container
       tags: dokuwiki_start_container
