Back in the quote boat

--- a/maintenance/sshserver.yml
+++ b/maintenance/sshserver.yml
@@ -4,7 +4,7 @@
     hosts: DOCKERHOST-PROD
     tasks:
 
-    - name: Stop the SSH-SERVER container(s)
+    - name: Stop the SSH-SERVER container
       shell:
         " /usr/local/bin/docker stop ssh-server "
       become: yes
@@ -48,9 +48,9 @@
 
     - debug: msg="{{sshserver_pull_image.stdout}}"
 
-    - name: Start the SSH-SERVER container(s)
+    - name: Start the SSH-SERVER container
       shell:
-        " /usr/local/bin/docker run -d -p 7226:22   --name ssh-server   --hostname foxy-ssh-gateway   -v /Users/hank/Docker/ssh-server/data/id_rsa.pub:/etc/authorized_keys/foxy:ro   -v /Users/hank/Docker/ssh-server/data/etc-ssh/:/etc/ssh/   -e SSH_USERS=foxy:50:50   -e MOTD=You\ are\ connected\ to\ Foxy\'s\ SSH\ Gateway   panubo/sshd:latest "
+        ' /usr/local/bin/docker run -d -p 7226:22   --name ssh-server   --hostname foxy-ssh-gateway   -v /Users/hank/Docker/ssh-server/data/id_rsa.pub:/etc/authorized_keys/foxy:ro   -v /Users/hank/Docker/ssh-server/data/etc-ssh/:/etc/ssh/   -e SSH_USERS=foxy:50:50   -e MOTD="You are connected to Foxy's SSH Gateway"   panubo/sshd:latest '
       become: yes
       args:
          executable: /bin/bash
