--- a/maintenance/vault.yml
+++ b/maintenance/vault.yml
@@ -39,10 +39,10 @@
 
     - name: Creates the VAULT-HOME Image
       shell:
-        " /usr/local/bin/docker build -t vault:homemade . "
+        " /usr/local/bin/docker build -t vault:homemade /Users/hank/Docker/vault/git/docker-vault/0.X/Dockerfile "
       become: yes
       args:
-         chdir: /Users/hank/Docker/vault/git/docker-vault/0.X/
+#         chdir: /Users/hank/Docker/vault/git/docker-vault/0.X/
          executable: /bin/bash
       register: vault_pull_image
       tags: vault_pull_image
