--- a/maintenance/vault.yml
+++ b/maintenance/vault.yml
@@ -39,7 +39,7 @@
 
     - name: Creates the VAULT-HOME Image
       shell:
-        " /usr/local/bin/docker build -t vault:homemade . "
+        " /usr/local/bin/docker build -t vault:homemade ./Dockerfile "
       become: yes
       args:
          chdir: /Users/hank/Docker/vault/git/docker-vault/0.X/
