--- a/maintenance/vault.yml
+++ b/maintenance/vault.yml
@@ -39,9 +39,10 @@
 
     - name: Creates the VAULT-HOME Image
       shell:
-        " /usr/local/bin/docker build -t vault:homemade /Users/hank/Docker/vault/git/docker-vault/0.X/Dockerfile "
+        " /usr/local/bin/docker build -t vault:homemade . "
       become: yes
       args:
+         chdir: /Users/hank/Docker/vault/git/docker-vault/0.X/
          executable: /bin/bash
       status_code: 1
       register: vault_pull_image
