--- a/maintenance/sshserver.yml
+++ b/maintenance/sshserver.yml
@@ -7,6 +7,7 @@
     - name: Stop the SSH-SERVER container
       shell:
         " /usr/local/bin/docker stop ssh-server "
+      ignore_errors: yes
       become: yes
       args: 
          executable: /bin/bash
@@ -18,6 +19,7 @@
     - name: Remove the SSH-SERVER container
       shell:
         " /usr/local/bin/docker rm ssh-server "
+      ignore_errors: yes
       become: yes
       args:
          executable: /bin/bash
@@ -29,6 +31,7 @@
     - name: Removes the SSH-SERVER Image
       shell:
         " /usr/local/bin/docker rmi panubo/sshd:latest "
+      ignore_errors: yes
       become: yes
       args:
          executable: /bin/bash
@@ -50,7 +53,7 @@
 
     - name: Start the SSH-SERVER container
       shell:
-        /usr/local/bin/docker run -d -p 7226:22   --name ssh-server   --hostname foxy-ssh-gateway   -v /Users/hank/Docker/ssh-server/data/id_rsa.pub:/etc/authorized_keys/foxy:ro   -v /Users/hank/Docker/ssh-server/data/etc-ssh/:/etc/ssh/   -e SSH_USERS="foxy:50:50"   -e MOTD="You are connected to Foxy's SSH Gateway"   panubo/sshd:latest
+        /usr/local/bin/docker run -d -p 10722:22   --name ssh-server   --hostname foxy-ssh-gateway   -v /Users/hank/Docker/ssh-server/data/id_rsa.pub:/etc/authorized_keys/foxy:ro   -v /Users/hank/Docker/ssh-server/data/etc-ssh/:/etc/ssh/   -e SSH_USERS="foxy:50:50"   -e MOTD="You are connected to Foxy's SSH Gateway"   panubo/sshd:latest
       become: yes
       args:
          executable: /bin/bash
