--- a/maintenance/dokuwiki.yml
+++ b/maintenance/dokuwiki.yml
@@ -7,6 +7,7 @@
     - name: Stop the DOKUWIKI container(s)
       shell:
         " /usr/local/bin/docker stop wiki_music "
+      ignore_errors: yes
       become: yes
       args: 
          executable: /bin/bash
@@ -18,6 +19,7 @@
     - name: Remove the DOKUWIKI container(s)
       shell:
         " /usr/local/bin/docker rm wiki_music "
+      ignore_errors: yes
       become: yes
       args:
          executable: /bin/bash
@@ -29,6 +31,7 @@
     - name: Removes the DOKUWIKI Image
       shell:
         " /usr/local/bin/docker rmi linuxserver/dokuwiki:latest "
+      ignore_errors: yes
       become: yes
       args:
          executable: /bin/bash
