--- a/maintenance/pihole.yml
+++ b/maintenance/pihole.yml
@@ -7,6 +7,7 @@
     - name: Stop the PIHOLE container(s)
       shell:
         " /usr/local/bin/docker stop pihole "
+      ignore_errors: yes
       become: yes
       args: 
          executable: /bin/bash
@@ -18,6 +19,7 @@
     - name: Remove the PIHOLE container(s)
       shell:
         " /usr/local/bin/docker rm pihole "
+      ignore_errors: yes
       become: yes
       args:
          executable: /bin/bash
@@ -29,6 +31,7 @@
     - name: Removes the PIHOLE Image
       shell:
         " /usr/local/bin/docker rmi pihole/pihole:latest "
+      ignore_errors: yes
       become: yes
       args:
          executable: /bin/bash
